# tapasco-hpx-wrapper

./: LICENSE  README.md  Tapasco-HPXConfig.cmake  TapascoHPXConfig.cmake
examples/arraysum-complex/: CMakeLists.txt  main.cpp
examples/arraysum-pipeline/: CMakeLists.txt  main.cpp
examples/arraysum-simple/: CMakeLists.txt  main.cpp
include/: tapasco-hpx.hpp
